[package]
name = "bot-scrapper" # Your existing package name
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] } # Removed "auto-send" feature
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13" # Existing dependency
tokio = { version = "1", features = ["full"] } # Ensure "full" or "rt-multi-thread", "macros", "time"
log = "0.4"
pretty_env_logger = "0.4"

# New dependencies for YTS integration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Often pulled by reqwest, but good to be explicit
urlencoding = "2.1.3" # For magnet link construction
once_cell = "1.19.0" # For lazy static global state